--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "lint": "eslint src vite.config.ts tailwind.config.ts",
+    "lint:all": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
